@@ -56,6 +56,7 @@ multisite_builtin_views.update({
                                'host_acknowledged',
                                'hostregex',
                                'host_notifications_enabled',
+                               'hostgroups',
                                'opthostgroup',
                                'host_check_command',
                                'opthost_contactgroup',
@@ -1029,6 +1030,7 @@ multisite_builtin_views.update({
                                  'siteopt',
                                  'hostregex',
                                  'summary_host',
+                                 'hostgroups',
                                  'opthostgroup',
                                  'opthost_contactgroup',
                                  'host_check_command',
@@ -1091,6 +1093,8 @@ multisite_builtin_views.update({
                'show_filters': ['service_in_notification_period',
                                 'optservicegroup',
                                 'optservice_contactgroup',
+                                'hostgroups',
+                                'servicegroups',
                                 'service_notifications_enabled',
                                 'host_in_notification_period',
                                 'in_downtime',
